
	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py:
	Use the registry data before trying to instantiate the plugin, avoids
	importing a plugin which is not supported.

2008-02-25  Arek Korbik  <arkadini@gmail.com>

	* flumotion/common/medium.py (PingingMedium._ping):
	Add errback handler for the 'ping' remote call.

2008-02-25  Johan Dahlin  <johan@flumotion.com>

	* flumotion/test/test_wizard_save.py: remove the now unused socket attribute too.

2008-02-25  Michael Smith <msmith@fluendo.com>

	* flumotion/test/test_wizard_save.py:
	  Fix up test now that we're not writing the socket.

2008-02-25  Michael Smith <msmith@fluendo.com>

	* flumotion/component/plugs/cortado/cortado_wizard.py:
	  Remove 'socket' here; no longer needed since the config writer doesn't
	  use it now.

2008-02-25  Michael Smith <msmith@fluendo.com>

	* flumotion/common/config.py:
	  Nothing uses the 'socket' attribute on a plug. So, make it
	  optional/deprecated.
	* flumotion/manager/config.py:
	  Don't write the deprecated socket attribute.
	* flumotion/wizard/configurationwriter.py:
	  Don't write the deprecated socket attribute.

2008-02-25  Michael Smith <msmith@fluendo.com>

	* flumotion/component/misc/httpserver/httpserver.py:
	  Don't assert for things that aren't programming errors.
	* flumotion/component/misc/httpserver/httpserver.xml:
	  Clean up after Johan's renaming; finish it.

2008-02-25  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/admin.py:
	Revert r6273. The added code was wrong, as was the commit message it came
	with.

2008-02-22  Johan Dahlin  <johan@flumotion.com>

	* configure.ac:
	* flumotion/component/misc/Makefile.am:
	* flumotion/component/misc/cortado/Makefile.am:
	* flumotion/component/misc/cortado/__init__.py:
	* flumotion/component/misc/cortado/cortado.py:
	* flumotion/component/misc/cortado/cortado.xml:
	* flumotion/component/misc/cortado/cortado_location.py.in:
	* flumotion/component/misc/cortado/cortado_wizard.py: