@@ -25,7 +25,7 @@ Exceptions for repository ignore files and metadata.
 
 UI
 --
-- use kbit/s and Mbit/s
+- use kbit/s and Mbit/s; also note that we follow SI so these are powers of 10
 - provide accelerators for controls
 
 API DOCS
@@ -132,6 +132,9 @@ COMPONENT PROPERTIES
 --------------------
 - bitrate should always be in bps, and have as description
   Bitrate to encode at (in bps)
+- byte properties should follow SI;
+  - if you use a power of 2, use kibi, mebi, ...
+  - default to using a power of 10, and kilo, mega, ...
 
 PLUGS
 -----
